# alpha-composition

./: .gitignore  CMakeLists.txt  CompositorCPU.cpp  CompositorGPU.cpp  CompositorParallel.cpp  CompositorSerial.cpp  OpenMP_compositor.cpp  OpenMP_compositor.h  ValgridSummary.txt  callgrind.out.66488  compositor.cpp  compositor.h  hwloc-ls.txt  image.cpp  image.h  lscpu.txt  main.cpp  output.csv  output.txt  stb_image.h
Presentation/: presentazione.odp
Report/: PC_course_project_template.aux  PC_course_project_template.bbl  PC_course_project_template.blg  PC_course_project_template.brf  PC_course_project_template.out  PC_course_project_template.pyg  PC_course_project_template.tex  egbib.bib
plots/: plots.ipynb
